--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script>
         const CLIENT_ID = '820ac110bc714b6c8dd097f1775f6083'; // Replace with your Spotify app's client ID
-        const REDIRECT_URI = 'http://localhost:5500/index.html'; // Change this if needed
+        const REDIRECT_URI = 'https://lizard-ctrl.github.io/spotifycollage/'; // Change this if needed
         const SCOPES = 'user-read-currently-playing user-modify-playback-state'; // Permissions to control playback
     
         // Get the access token from the URL hash
