--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         // Function to skip to the next track
        async function skipToNextTrack(accessToken) {
         try {
-                await fetch('https://api.spotify.com/v1/me/player/', {
+                await fetch('https://api.spotify.com/v1/me/player/next', {
                     method: 'POST',
                     headers: {
                         'Authorization': `Bearer ${accessToken}`
